Add video player functionality and update course module data with URLs and timestamps

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <div id="video-container" class="col-span-2 bg-[#1F1F39] rounded-xl shadow-md p-6">
             <h2 class="text-2xl text-blue-400 font-bold mb-6">Reproductor de Video</h2>
             <iframe
+                id="video-player"
                 class="w-full h-[calc(100%-1rem)] rounded-lg border border-gray-600"
-                src="https://www.youtube.com/embed/VIDEO_ID"
+                src="https://www.youtube.com/embed/vILhoJQdaoU?start=0"
                 frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
             </iframe>
         </div>
